adding delete & update function

--- a/src/main/webapp/UpdateMobile.html
+++ b/src/main/webapp/UpdateMobile.html
@@ -5,6 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+	<h1>Enter Mobile Id</h1>
+	<form action="update-mobile">
+		<input type="number" placeholder="Enter Mobile id " name="mobileId">
+		<br> <input type="text" placeholder="Enter Mobile Model "
+			name="mobileModel"> <br> <input type="text"
+			placeholder="Enter Mobile Brand " name="mobileBrand"> <br>
+		<input type="submit" value="ADD">
+	</form>
 </body>
 </html>
